--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <ul>
   <li>Coffee</li>
-  <li>chai</li>
+  <li>tea</li>
   <li>Milk</li>
 </ul>  
 
@@ -14,7 +14,7 @@
 
 <ol>
   <li>Coffee</li>
-  <li>chai</li>
+  <li>tea</li>
   <li>Milk</li>
 </ol> 
 
