--- a/index.html
+++ b/index.html
@@ -2,21 +2,10 @@
 <html>
 <body>
 
-<h2>An Unordered HTML List</h2>
+<h2>HTML Images</h2>
+<p>HTML images are defined with the img tag:</p>
 
-<ul>
-  <li>Coffee</li>
-  <li>tea</li>
-  <li>Milk</li>
-</ul>  
-
-<h2>An Ordered HTML List</h2>
-
-<ol>
-  <li>Coffee</li>
-  <li>tea</li>
-  <li>Milk</li>
-</ol> 
+<img src="rangoli.jpeg" alt="rangoli.com" width="104" height="142">
 
 </body>
 </html>
