--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <body>
 
-<h2>HTML Images</h2>
-<p>HTML images are defined with the img tag:</p>
+<h1>My World</h1>
 
-<img src="rangoli.jpeg" alt="rangoli.com" width="1004" height="1142">
+<p>My Rules.</p>
 
 </body>
 </html>
